--- a/timeTracker/Views/Time/timeIndex.cshtml
+++ b/timeTracker/Views/Time/timeIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Event>
+﻿@model List<Event> 
 @{
     ViewData["Title"] = "timeIndex";
 }
@@ -73,26 +73,22 @@
 <h1>All Events</h1>
 
 <div id="mySidebar" class="sidebar">
-    <form asp-controller="" , asp-action="" , method="">
+    <form asp-controller="Time" , asp-action="filter" , method="post">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <h2>Month</h2>
-            <select>
-                @for(int i = 1; i<=12; i++)
-                {
-                    DateTime now = new DateTime(2010, @i, 1);
-                    string month = now.ToString("MMMM");
-                    <option value=@i>@month</option>
-                }
-            </select>
+        <select name="months">
+            @for (int i = 1; i <= 12; i++)
+            {
+                DateTime now = new DateTime(2010, @i, 1);
+                string month = now.ToString("MMMM");
+                <option value=@i>@month</option>
+            }
+        </select>
         <h2>Year</h2>
-            <input type="number">
+        <input name="years" type="number" value="0" class="form-control">
         <br />
         <br />
         <button type="submit" class="btn btn-primary">Filter</button>
-        <button asp-controller="Ticketing" asp-action="ticketIndex" asp-route-id=""
-                class="btn btn-primary">
-            Clear
-        </button>
     </form>
 </div>
 
