final unit tests added

--- a/timeTracker/Views/Home/Index.cshtml
+++ b/timeTracker/Views/Home/Index.cshtml
@@ -1,3 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<p>Use for gaining access</p>
+<p>Email Username: jakefinal174@outlook.com</p>
+<p>Password: F!nal174</p>
